tests/errors/invalid-scale.typ
#import "../../src/lib.typ": score
#score(scale: 0, time: "4/4", bars: ((notes: "C5:w"),))
